Basic page structure with Navbar and Nav items ready. BS 4 Modal is added upon page entry.

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,11 @@
-/* style.csse */
+/* style.css */
+
+.pgfooter {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: lightslategray;
+    color: white;
+    text-align: center;
+}
